--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 .container .cor_preta .cor_verde{
@@ -99,13 +100,13 @@
 }
 
 .img{
-    width: 40%;
-    height: 100%;
+    width: 30%;
+    height: 80%;
     display: flex;
     align-items: center;
 }
 img{
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 40%;
+    max-height: 40%;
     border-radius: 50%;
 }
