--- a/style.css
+++ b/style.css
@@ -11,5 +11,7 @@ html, body{
     height: 100%;
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 25px;
+    color: white;
+    font-family: sans-serif;
 }
