--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+/*div principal*/
 .container{
     width: 60%;
     height: 100%;
@@ -7,21 +8,33 @@
     flex-direction: column;
 }
 
-.container .cor_preta{
+.container .semaforo{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/*fundo do semaforo*/
+.container .semaforo .cor_preta{
     width: 25%;
-    height: 55%;
+    height: 65%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background-color: black;
     border-radius: 15px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    margin: 0px 0px 10px 0px
 }
 
-.container .cor_preta .cor_vermelha{
+/*tamanho das luzes dentro do semaforo*/
+.container .semaforo .cor_preta .luzes{
     width: 50%;
     height: 28%;
-    background-color: rgb(190, 2, 2);
     margin-bottom: 10px;
     border-radius: 100%;
     display: flex;
@@ -29,33 +42,37 @@
     align-items: center;
 }
 
-.container .cor_preta .cor_amarela{
-    width: 50%;
-    height: 28%;
-    background-color: yellow;
-    margin-bottom: 10px;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/*luz vermelha*/
+.container .semaforo .cor_preta .cor_vermelha{
+    background-color:rgb(190, 2, 2);
+}
+
+/*luz amarela*/
+.container .semaforo .cor_preta .cor_amarela{
+    background-color:yellow;
     color: black;
 }
 
-.container .cor_preta .cor_verde{
-    width: 50%;
-    height: 28%;
-    background-color: green;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/*luz verde*/
+.container .semaforo .cor_preta .cor_verde{
+    background-color:green;
 }
 
-.container .cor_preta .opa{
+/*opacidade da luz*/
+.container .semaforo .cor_preta .opa{
     opacity: 40%;
 }
 
-.btns{
+/*elemento img*/
+.container .semaforo img{
+    max-width: 20%;
+    max-height: 25%;
+    border-radius: 50%;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+}
+
+/*div que guarda os botoes*/
+.div-btns{
     width: 100%;
     height: 20%;
     display: flex;
@@ -63,50 +80,38 @@
     align-items: center;
     padding: 5px;
 }
-
-.btns .btn-iniciar{
-    color: white;
+.div-btns .btn{
     font-weight: 700;
     font-size: 20px;
-    background-color: lightgreen;
-    border: none;
-    border-radius: 10px;
-    margin: 0px 10px 0px 0px;
-    padding: 10px 15px 10px 15px;
-}
-.btns .btn-iniciar:hover{
     background-color: white;
-    color: lightgreen;
-    border: 2px lightgreen solid;
+    border-radius: 8px;
     padding: 8px 13px 8px 13px;
+    margin-left: 15px;
+}
+.div-btns .btn:hover{
+    transition: 0.4s;
+    color: white;
     cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+}
+.div-btns .cor-verde{
+    color: lightgreen;
+    border: 2px solid lightgreen;
 }
 
-.btns .btn-manu{
-    color: white;
-    font-weight: 700;
-    font-size: 20px;
-    background-color: red;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 15px 10px 15px;
+.div-btns .cor-verde:hover{
+    background-color: lightgreen;
 }
-.btns .btn-manu:hover{
-    background-color: white;
+
+.div-btns .cor-vermelha{
     color: red;
     border: 2px red solid;
-    padding: 8px 13px 8px 13px;
-    cursor: pointer;
 }
 
-.img{
-    width: 30%;
-    height: 80%;
-    display: flex;
-    align-items: center;
+.div-btns .cor-vermelha:hover{
+    background-color: red;
 }
-img{
-    max-width: 40%;
-    max-height: 40%;
-    border-radius: 50%;
+
+.div-btns .cor-preta:hover{
+    background-color: black;
 }
